Topic Modeling - LSA

--- a/Topic Modeling/Topic Modeling.ipynb
+++ b/Topic Modeling/Topic Modeling.ipynb
@@ -49,7 +49,21 @@
     "s -> Diagonal matrix of singular values of M.\n",
     "\n",
     "Critically truncated SVD reduces dimensionality by reducing selecting only t largest singular values and only keeping first t columns of U * V. In this case, t, is a hyperparameter we can select and adjust to reflect the number of topics we want to find.\n",
-    "\n"
+    "\n",
+    "$$ A = U_{t} * S_{t} * V_{t} $$\n",
+    "\n",
+    "U -> Document-topic matrix\n",
+    "V -> Term-Topic matrix\n",
+    "\n",
+    "In both U and V, columns correspond to one of the t topics.  In U rows represent document vectors expressed in terms of topics. In V, rows represent document vectors expressed in terms of topics. With these document vectors and term vector, we can now easily apply measures such as cosine similarity to evaluate:\n",
+    "1. The similarity of different documents. \n",
+    "2. The similarity of different words. \n",
+    "3. The similarity of terms (or queries) and documents (which becomes useful in information retrieval when we want to retrieve passages most relevant to our search query). \n",
+    "\n",
+    "LSA Drawbacks:\n",
+    "1. Lack of interpretable embeddings (we do not know what topics are and components may be arbitrarily positive or negative). \n",
+    "2. Need for really large set of documents and vocabulary to get accurate results. \n",
+    "3. Less efficient representations. "
    ]
   },
   {
