Topic Modeling - pLSA

--- a/Topic Modeling/Topic Modeling.ipynb
+++ b/Topic Modeling/Topic Modeling.ipynb
@@ -67,11 +67,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### pLSA - Provbabilistic Latent Semantic Analysis\n",
+    "\n",
+    "1. Uses probabilistic model instead of SVD to tackle problem. \n",
+    "2. The core idea is to find a probabilistic model with latent topics that can generate data we observe in document-term matric. \n",
+    "\n",
+    "Basic Assumptions:\n",
+    "1. Each document consists of a mixture of topics. \n",
+    "2. Each topic consists of a collection of words. \n",
+    "\n",
+    "pLSA adds a probabilistic spin to these assumptions: \n",
+    "1. Given a document d, topic z is present in that document with probability P(z/d). \n",
+    "2. Given a topic z, word w is drawn from z with probability P(w/z).\n",
+    "\n",
+    "Joint Probability of seeing a given document and word together is:\n",
+    "\n",
+    "\n",
+    "\n",
+    "In this case P(D), P(Z/D), P(W/Z) are parameters of our model. P(D) can be determind directly from our corpus. P(Z/D) and P(W/D) are modeled as multinomial distributions and then can be trained using expectation-minimization algorithm. EM is method of finding the likeliest parameter estimates for a model which depends on unobserved latent variables (in our case - topics). \n",
+    "\n",
+    "P(D/W) can be equivalently parameterized using a different set of 3 parameters. We can understand this equivalency by looking at the model as a generative process."
+   ]
   }
  ],
  "metadata": {
