Topic Modeling - LDA

--- a/Topic Modeling/Topic Modeling.ipynb
+++ b/Topic Modeling/Topic Modeling.ipynb
@@ -89,7 +89,33 @@
     "\n",
     "In this case P(D), P(Z/D), P(W/Z) are parameters of our model. P(D) can be determind directly from our corpus. P(Z/D) and P(W/D) are modeled as multinomial distributions and then can be trained using expectation-minimization algorithm. EM is method of finding the likeliest parameter estimates for a model which depends on unobserved latent variables (in our case - topics). \n",
     "\n",
-    "P(D/W) can be equivalently parameterized using a different set of 3 parameters. We can understand this equivalency by looking at the model as a generative process."
+    "P(D/W) can be equivalently parameterized using a different set of 3 parameters. We can understand this equivalency by looking at the model as a generative process. In our first parameterization we were starting with the document with P(d) and then generating topic with P(z/d) and then generating word with P(w/z). In this parameterization we are starting with topic with P(z) and then independently generating topics with P(d/z) and word with P(w/z). \n",
+    "\n",
+    "pLSA really just adds a probabilistic treatment of topics and words on top of LSA. \n",
+    "\n",
+    "pLSA Drawbacks:\n",
+    "1. Because there are no parameters to model P(D), we don't know how to assign probabilities to new documents. \n",
+    "2. The number of parameters for pLSA grows linearly with the number of documents we have so it is prone to overfitting. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LDA - Latent Dirichlet Allocation\n",
+    "\n",
+    "1. It is a bayesian  version of pLSA. \n",
+    "2. Uses Dirichlet priors for document-topic and word-topic distribution lending itself to better generalizations. \n",
+    "3. Dirichlet Distribution - is actually distribution over distributions. \n",
+    "4. It answers the question - given this type of distribution, what are some actual probability distributions I am likely to see. \n",
+    "5. Dirichlet Distribution - provides a way of sampling probability distribution of a specific type. \n",
+    "\n",
+    "In pLSA, we sample a document then a topic based on that document and then a word based on that topic. \n",
+    "LDA - From a Dirichlet Distribution Dir(alpha), we draw a random sample presenting the topic distribution or topic mixture of a particular document. This topic distribution is theta. From theta, we select a particular topic Z based on distribution. Next, from another dirichlet distribution Dir(beta), we select a random sample representing word distribution of topic Z. This word distribution is phy. From phy we choose word w. \n",
+    "\n",
+    "LDA typically works better than pLSA because it can generalize to new document easily. In pLSA, document probability is a fixed point in dataset. If we haven't seen a document, we don't have that data point. In LDA, dataset serves as training data for dirichlet distribution of document-topic distributions. If we haven't seen a document, we can easily sample from dirichlet distribution and move forward there. \n",
+    "\n",
+    "With LDA, we can extract human interpretable topics from a document corpus, where each topic is characterized by words they are most strongly associated with."
    ]
   }
  ],
