Topic Modeling - Ida2vec

--- a/Topic Modeling/Topic Modeling.ipynb
+++ b/Topic Modeling/Topic Modeling.ipynb
@@ -117,6 +117,34 @@
     "\n",
     "With LDA, we can extract human interpretable topics from a document corpus, where each topic is characterized by words they are most strongly associated with."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LDA in Deep Learning - Ida2Vec\n",
+    "\n",
+    "It is important to be able to extract meaning from text at every level - word, paragraph, document. At document level, we now know how to represent text as mixtures of topics. At word level, we use word2vec to obtain vector representation. \n",
+    "\n",
+    "Idea2vec is an extension of word2vec and LDA that jointly learns word, document and topic vectors. Ida2vec builds on top of skip-gram model of word2vec to generated word vectors but essentially it's a neural net that learns a word embedding by trying to use the input word to predict surrounding context words. \n",
+    "\n",
+    "With Ida2vec, instead of using word vector directly to predict context words, we leverage a context vector to make predictions. This context vector is created as sum of 2 other vectors: word vector and document vector. \n",
+    "\n",
+    "Word vector created from skip-gram. Document vector is a weighted combination of 2 other components. \n",
+    "1. The document weight vector, representing weights (later to be transformed into percentages) of each topic in document. \n",
+    "2. The topic matrix, representing each topic and its corresponding vector embedding.\n",
+    "\n",
+    "Together the document vector and word vector generate context vectors from each word in document.\n",
+    "\n",
+    "The power of Ida2vec lies in fact that it not only learns word embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
