--- a/Topic Modeling/Topic Modeling.ipynb
+++ b/Topic Modeling/Topic Modeling.ipynb
@@ -136,7 +136,28 @@
     "\n",
     "Together the document vector and word vector generate context vectors from each word in document.\n",
     "\n",
-    "The power of Ida2vec lies in fact that it not only learns word embeddings"
+    "The power of Ida2vec lies in fact that it not only learns word embeddings (and context word embeddings) for words, it simultaneously learns topic representations and document representations as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LSA - Latent Semantic Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LDA - Latent Dirichlet Allocation"
    ]
   },
   {
